testsuite/tests/typecheck/should_fail/tcfail183.hs

module ShouldCompile where

newtype Swizzle = MkSwizzle (forall a. Ord a => [a] -> [a])
